2.0 beta3
Add chzzk live alarm
fix some bugs